# compass

./: .gitignore  LICENSE  README.md  nginx.conf  redeploy.sh  setup.sh
compass/: package-lock.json
compass/src/app/: page.tsx
compass/src/app/auth/: page.tsx
compass/src/app/entries/: page.tsx
compass/src/components/: JournalEntryList.tsx  LoginForm.tsx  ThemeRegistry.tsx
glass/: .env.development  .env.production  next.config.js  next.config.mjs  package-lock.json  package.json
glass/src/app/: layout.tsx  page.tsx
glass/src/app/auth/: page.tsx
glass/src/app/entries/: page.tsx
glass/src/app/journal/: page.tsx
glass/src/components/: JournalEntryForm.tsx  Layout.tsx  RegisterForm.tsx  ThemeRegistry.tsx
glass/src/pages/api/: auth.ts
glass/src/styles/: theme.ts
glass/src/theme/: theme.ts
glass/src/utils/: api.ts
metal/: .gitignore  README.md  api_test.py  app.py  metal.service  pyproject.toml
metal/metal/: __init__.py  app.py  config.py  exceptions.py
metal/metal/routes/: auth.py  journal.py  openai.py
metal/metal/services/: auth_service.py  firebase_service.py  journal_service.py
metal/tests/: test_api.py
